# tptools

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  conftest.py  httpsrv.py  pyproject.toml  watchtests.sh  webserver.py
.github/workflows/: 0-testing.yml
ext/: Squore.config.toml
ext/squore/: settings.json
flags/: AX  ENG  GP  GS  NIR  PR  TW
integration/: anon_tournament.sqlite  conftest.py  test_loading_entries.py  test_loading_matches.py  test_loading_playermatches.py  test_loading_settings.py  test_loading_tournament.py  test_loading_tpdata.py
tests/: conftest.py  fixtures.py  test_0ensure_run_from_project_root.py  test_asyncio_utils.py  test_club.py  test_country.py  test_court.py  test_devcourtmap.py  test_draw.py  test_drawtype.py  test_entry.py  test_event.py  test_filewatcher.py  test_jsonfeed.py  test_location.py  test_match.py  test_matchmaker.py  test_matchstatus.py  test_mixins_comparable.py  test_mixins_repr.py  test_mixins_str.py  test_namepolicy_club.py  test_namepolicy_country.py  test_namepolicy_court.py  test_namepolicy_player.py  test_namepolicy_policybase.py  test_paramsmodel.py  test_player.py  test_playermatch.py  test_playermatchstatus.py  test_reader_csv.py  test_reader_util.py  test_settings.py  test_slot.py  test_stage.py  test_tournament.py  test_tpclub.py  test_tpcountry.py  test_tpcourt.py  test_tpdata.py  (+11 more)
tests/csv_fixtures/: playerentries.csv  playermatches.csv
tests/export/: conftest.py  test_court.py  test_draw.py  test_entry.py  test_match.py  test_tournament.py
tests/ext/squore/: conftest.py  test_config.py  test_court.py  test_draw.py  test_entry.py  test_match.py  test_matchesfeed.py  test_matchessection.py
tests/namepolicy/: test_clubname.py  test_countryname.py  test_courtname.py  test_drawname.py  test_paircombine.py  test_playername.py  test_policybase.py
tests/tpsrv/: test_util.py
tpsrv/: cli.py  debug.py  post.py  sq_stdout.py  squoresrv.py  stdout.py  tp.py  tp_post.py  tp_proc.py  tp_stdout.py  util.py
tptools/: __init__.py  asyncio.py  basemodel.py  configfile.py  court.py  devcourtmap.py  draw.py  drawtype.py  entry.py  filewatcher.py  fswatcher.py  jsonfeed.py  logger.py  match.py  matchmaker.py  models.py  namepolicy.py  paramsmodel.py  playermatch.py  playermatchstatus.py  slot.py  sqlmodels.py  tournament.py  tpdata.py  tpfile.py  tpmatch.py  tpmatchstatus.py  tpwatcher.py  util.py
tptools/cli/: squoresrv.py  tpshortcut.py  tpsrv.py  tpwatcher.py
tptools/export/: __init__.py  court.py  draw.py  entry.py  match.py  tournament.py
tptools/ext/: squore.py
tptools/ext/squore/: __init__.py  basemodel.py  config.py  court.py  draw.py  entry.py  feed.py  match.py  section.py
tptools/ext/squore/assets/: config.toml  settings.json
tptools/ext/squore/assets/flags/: WAL  XK
tptools/mixins/: __init__.py  comparable.py  repr.py  str.py
tptools/namepolicy/: __init__.py  clubname.py  countryname.py  courtname.py  drawname.py  paircombine.py  playername.py  policybase.py
tptools/reader/: base.py  csv.py  mdb.py  tp.py  util.py
tptools/tpsrv/: cli.py  debug.py  post.py  sq_stdout.py  squoresrv.py  stdout.py  tp.py  tp_post.py  tp_proc.py  tp_recv.py  tp_stdout.py  util.py
tptools/winscripts/: tpsrv-tp.bat
util/: tp2sqlite.sh
winscripts/: squoresrv.bat  tpsrv-tp.bat
